# GeometriaComputacional

./: Modulo Estruturado dos TCCs.pptx  README.md
OpenGl/MinhaCasaMinhaVidaGeometriaComputacional/: CMakeLists.txt  main.cpp
TriangularizacaoDePolignos/: Algoritmo.py
